kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/1_ClassSubTyping_1.kmt
/* $Id: 1_ClassSubTyping_1.kmt,v 1.3 2007-10-16 11:49:10 ftanguy Exp $ */

// Simple subtyping test for simple 
// inheritance between two classes

package tctest;

require kermeta

class A {}
class B inherits A{}

class Test {

	operation test1() : Void is do
		var a: A init A.new
	end
	
	operation test2() : Void is do
		var a: A init B.new
	end
	
	operation test3() : Void is do
		var b: B init B.new
		var a: A
		a := b
		b ?= a
	end
	
	operation test4(a : A) : Void is do
		test4(B.new)
	end
	
	operation test5(a : A) : B is do
		var aa : B init test5(B.new)
		result := void
	end

}

/* END OF FILE */