kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/1_ClassSubTyping_1.kmt
/* $Id: 1_ClassSubTyping_1.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// INVALID Simple subtyping test for simple 
// inheritance between two classes

package tctest;

require kermeta

class A {}
class B inherits A{}

class Test {

	operation test1() : Void is do
		var b: B init A.new
	end
	
	operation test2() : Void is do
		var b: B init B.new
		var a: A
		a ?= b
	end
	
	operation test3() : Void is do
		var b: B init B.new
		var a: A
		b := a
	end
	
	operation test4(a : B) : Void is do
		test4(A.new)
	end
	
	operation test5(a : B) : A is do
		var aa : B init test5(B.new)
	end

}

/* END OF FILE */